# blacknaturalWFlask

./: Procfile  README.md  main.py  pyproject.toml  pyproject.toml.backup  requirements.txt  runtime.txt
static/: script.js  style.css
templates/: about.html  accessories.html  alcohol.html  art.html  casual.html  clothing.html  decor.html  entertainment.html  food.html  fun.html  gardening.html  hair.html  hairaccessories.html  household.html  index.html  kids.html  learning.html  marketplaces.html  merch.html  services.html  shoes.html  skin.html  stationery.html  swim.html  tech.html  undergarments.html  wellness.html
