[tool.poetry]
name = "blacknaturalwflask"
version = "0.1.0"
description = ""
authors = ["Mon'Trice Brightmon <mnbrightmon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
airtable = "^0.3.1"
pip = "^20.1.1"
airtable-python-wrapper = "^0.13.0"
requests = "^2.24.0"
virtualenv = "^20.0.25"
python-dotenv = "^0.13.0"
glfw = "^1.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
